# DopeWars

./: CMakeLists.txt  PreLoad.cmake  Readme.md  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/macros/: FindReadline.cmake
cmake/platform/: cmake_uninstall.in.cmake  settings.cmake
cmake/platform/osx/: settings.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/world/: CMakeLists.txt  Dope.cpp  Dope.h  main.cpp
